[package]
name = "prometheus-mqtt-transport"
version = "1.0.1-20220218"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "prom2mqtt-fetch"
path = "src/prom2mqtt-fetch/main.rs"

[[bin]]
name = "prom2mqtt-export"
path = "src/prom2mqtt-export/main.rs"

[lib]
name = "global"
path = "src/global/lib.rs"

[dependencies]
chrono = "0.4.23"
fern = "0.6.1"
flate2 = "1.0.25"
gethostname = "0.4.1"
getopts = "0.2.21"
lazy_static = "1.4.0"
log = "0.4.17"
paho-mqtt = "0.12.0"
prometheus = "0.13.3"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
simple-error = "0.2.3"
tiny_http = "0.12.0"
url = "2.3.1"
